# candlestore

./: ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  README.md  ROADMAP.md  go.mod
.github/workflows/: ci.yml
benches/: README.md  bench.rs  design_decisions.rs  ipc_comparison.rs
examples/: binance_feed.rs  cache_ladder.rs  hw_probe.rs  multi_symbol_contention.rs  paper_trade.rs  reactive_latency.rs  shm_pipeline.rs  shm_reader.rs  shm_writer.rs
go-client/: go.mod
go-client/candlestore/: candlestore.go
go-client/cmd/: main.go
include/: candlestore.h
src/: affinity.rs  candle.rs  feed.rs  ffi.rs  hw.rs  lib.rs  parquet.rs  ring_buffer.rs  shm.rs  signal.rs  store.rs
src/matching/: book.rs  event.rs  mod.rs  order.rs  paper.rs  portfolio.rs
tests/: cross_process_shm.rs  ffi.rs
