[package]
name = "candlestore"
version = "0.1.0"
edition = "2024"

[lib]
name = "candlestore"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]   # cdylib for C/Go FFI, rlib for Rust tests

[features]
feed = [
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:serde",
    "dep:serde_json",
    "dep:futures-util",
]

[dependencies]
hashbrown = "0.14"
parking_lot = "0.12"
arrow = { version = "53", features = ["ipc"] }
parquet = "53"
thiserror = "1"
num_cpus = "1"

# feed feature deps (optional)
tokio             = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.23", features = ["native-tls"], optional = true }
serde             = { version = "1", features = ["derive"], optional = true }
serde_json        = { version = "1", optional = true }
futures-util      = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion    = { version = "0.5", features = ["html_reports"] }
tempfile     = "3"
tokio        = { version = "1", features = ["full"] }
hashbrown    = "0.14"
parking_lot  = "0.12"

[[bench]]
name    = "bench"
harness = false

[[bench]]
name    = "design_decisions"
harness = false

[[bench]]
name    = "ipc_comparison"
harness = false

[[example]]
name              = "binance_feed"
required-features = ["feed"]

[[example]]
name = "hw_probe"

[[example]]
name = "shm_writer"

[[example]]
name = "shm_reader"
